--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -26,16 +26,17 @@
     {% endif %}
   </div>
 </div>
-
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     {% if dataset.records | length > 0 %}
-    <section class="app-table-container govuk-!-margin-bottom-6">
+    <section class="app-table-container">
       <table class="app-data-table">
         <thead class="app-data-table__head">
           <tr class="app-data-table__row">
             {% for field in dataset.sorted_fields() %}
-            <th scope="col" class="app-data-table__header">{{field.field | capitalize}}</th>
+            <th scope="col" class="app-data-table__header">
+              <span class="app-data-table__header__label">{{field.field | capitalize}}</span>
+            </th>
             {% endfor %}
             {% if session["user"] %}
               <th scope="col" class="app-data-table__header app-data-table__header--ui">
@@ -81,4 +82,6 @@
     {% endif %}
   </div>
 </div>
+
+
 {% endblock content %}
