--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -1,14 +1,18 @@
+
+html, body {
+  overflow-x:hidden;
+  width:100%;
+}
+
 .app-table-container {
-  overflow-x: scroll;
-  width: 100%;
+  overflow-x: auto;
   border: 1px solid rgb(169, 169, 169);
   background-image:
-
-    /* Shadows */
+    // Shadows
     linear-gradient(to right, white, white),
     linear-gradient(to right, white, white),
 
-/* Shadow covers */
+    // Shadow covers
     linear-gradient(to right, rgba(0,0,0,.25), rgba(255,255,255,0)),
     linear-gradient(to left, rgba(0,0,0,.25), rgba(255,255,255,0));
 
@@ -58,17 +62,14 @@
 
 .app-data-table {
   border-collapse: collapse;
-  table-layout: fixed;
   border-style: solid;
   border: 1px solid govuk-colour('light-grey');
   &__header {
     background-color: govuk-colour('light-grey');
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    padding-top: 1em;
-    padding-bottom: 1em;
     vertical-align: middle;
-    text-align-last: left;
+    text-align: left;
   }
   thead {
     tr:first-child {
@@ -78,6 +79,7 @@
         }
         &:not(.app-data-table__header--ui) {
           border-top-width: 2px;
+          min-width: 20ch;
         }
       }
     }
@@ -99,11 +101,8 @@
     }
   }
   &__header, &__cell {
-    @include govuk-responsive-padding(3);
     border: 1px solid $govuk-border-colour;
-    max-width: 100%;
-    white-space: nowrap;
-    vertical-align: top;
+    @include govuk-responsive-padding(3);
     &:first-child {
       border-left-width: 2px;
     }
@@ -112,15 +111,17 @@
     }
     &--ui{
       border-width: 0;
-      @include govuk-responsive-padding(3, 'left');
-      @include govuk-responsive-padding(3, 'right');
     }
   }
+  &__header,
+  &__cell--ui {
+    white-space: nowrap;
+    vertical-align: top;
+  }
   &__cell {
-    font-family: 'Courier New', Courier, monospace;
+    font-family: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro","Fira Mono", "Droid Sans Mono", "Courier New", monospace;
     &--ui {
-      padding-top: 0;
-      padding-bottom: 0;
+      padding: 0 5px;
     }
   }
 }
