--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -34,7 +34,7 @@ html, body {
   }
   &::-webkit-scrollbar-track {
     border-radius: 5px;
-    background-color: #DFE9EB;
+    background-color: #e8e8e8;
   }
 
   &::-webkit-scrollbar-track:hover {
@@ -79,7 +79,7 @@ html, body {
         }
         &:not(.app-data-table__header--ui) {
           border-top-width: 2px;
-          min-width: 20ch;
+          // min-width: 20ch;
         }
       }
     }
