--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -32,11 +32,12 @@
 {%- from 'govuk_frontend_jinja/components/warning-text/macro.html' import govukWarningText -%}
 {%- from 'partials/components/button-menu/macro.html' import buttonMenu -%}
 {%- from 'partials/components/field/macro.html' import appField -%}
+{%- from 'partials/components/section-nav/macro.html' import appSectionNavigation -%}
 {%- from "digital-land-frontend/components/sub-nav-tabs/macro.jinja" import dlSubNavTabs %}
 
 {% block stylesheets %}
   <link rel="stylesheet" href="/static/stylesheets/application.css">
-  <link rel="stylesheet" href="/static/stylesheets/vendor/accessible-autocomplete.css">
+  {# <link rel="stylesheet" href="/static/stylesheets/vendor/accessible-autocomplete.css"> #}
   {% block pageStylesheets %}{% endblock pageStylesheets %}
 {% endblock %}
 
