--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -16,19 +16,19 @@
         appSectionNavigation({
             "classes": "govuk-!-margin-bottom-6",
             "id": "section-menu",
-            "currentPath": url_for("main.dataset", name=dataset.dataset),
+            "currentPath": url_for("main.dataset", id=dataset.dataset),
             "itemsList": [
                 {
                     "title": "Records",
-                    "url": url_for("main.dataset", name=dataset.dataset)
+                    "url": url_for("main.dataset", id=dataset.dataset)
                 },
                 {
                     "title": "Schema",
-                    "url": url_for('main.schema', name=dataset.dataset)
+                    "url": url_for('main.schema', id=dataset.dataset)
                 },
                 {
                     "title": "History",
-                    "url": url_for("main.history", name=dataset.dataset)
+                    "url": url_for("main.history", id=dataset.dataset)
                 }
             ]
         })
