--- a/application/templates/records.html
+++ b/application/templates/records.html
@@ -1,42 +1,7 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/dataset.html' %}
 
-{% block content %}
+{% block content_primary %}
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <span class="govuk-caption-l">{{ 'Dataset' }}</span>
-    <span class="govuk-heading-l">{{ dataset.name }}</span>
-    {# <span class="govuk-caption-l">{{ dataset.name }}</span>
-    <h1 class="govuk-heading-l">{{ dataset.records | length }} records</h1> #}
-  </div>
-</div>
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    {% set blah = url_for("main.dataset", id=dataset.name) %}
-    {{
-        appSectionNavigation({
-            "classes": "govuk-!-margin-bottom-6",
-            "id": "section-menu",
-            "currentPath": url_for("main.dataset", id=dataset.dataset),
-            "itemsList": [
-                {
-                    "title": "Records",
-                    "url": url_for("main.dataset", id=dataset.dataset)
-                },
-                {
-                    "title": "Schema",
-                    "url": url_for('main.schema', id=dataset.dataset)
-                },
-                {
-                    "title": "History",
-                    "url": url_for("main.history", id=dataset.dataset)
-                }
-            ]
-        })
-    }}
-
-  </div>
-</div>
 <div class="app-grid-row app-grid-row--space-between govuk-!-margin-bottom-3">
   <div class="app-grid-column">
     <h2 class="govuk-heading-m govuk-!-margin-bottom-1">{{ dataset.records | length }} records</h2>
@@ -115,5 +80,4 @@
   </div>
 </div>
 
-
-{% endblock content %}
+{% endblock content_primary %}
