--- a/application/templates/schema.html
+++ b/application/templates/schema.html
@@ -1,15 +1,7 @@
-{% extends 'layouts/base.html' %}
+{% extends 'layouts/dataset.html' %}
 
-{% block content %}
+{% block content_primary %}
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-three-quarters">
-    <span class="govuk-caption-l">{{ dataset.name }}</span>
-    <h1 class="govuk-heading-l">Schema</h1>
-  </div>
-</div>
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-three-quarters">
     <h2 class="govuk-heading-m">Fields</h2>
 
     <dl class="govuk-summary-list">
@@ -27,7 +19,4 @@
       {% endfor %}
     </dl>
 
-    <p class="govuk-body"><a href="/dataset/{{dataset.dataset}}">View records</a></p>
-  </div>
-</div>
-{% endblock content %}
+{% endblock content_primary %}
