--- a/application/templates/datasets.html
+++ b/application/templates/datasets.html
@@ -4,7 +4,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
     <h1 class="govuk-heading-l">Datasets</h1>
-    <p class="govuk-body-l">Datasets managed by the Planning Data Service within the Department for Levelling Up, Housing and Communities.</p>
+    <p class="govuk-body-l">Datasets managed by the Digital Land team within the Department for Levelling Up, Housing and Communities.</p>
   </div>
   <div class="govuk-grid-column-full">
     <table class="app-table app-table--responsive">
