--- a/application/templates/history.html
+++ b/application/templates/history.html
@@ -6,15 +6,15 @@
   <caption class="govuk-table__caption govuk-table__caption--m">21 September 2023</caption>
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Event</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Description</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-text-align-right">Action</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third"><span class="govuk-visually-hidden">Event</span></th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Change notes</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-text-align-right"><span class="govuk-visually-hidden">Action</span></th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
       <td class="govuk-table__cell">
-        {{ govukTag({ "text": "Ended record", "classes": "govuk-tag--red" }) }}
+        {{ govukTag({ "text": "Archived record", "classes": "govuk-tag--red" }) }}
       </td>
       <td class="govuk-table__cell govuk-!-width-one-third">Added new provision reason</td>
       <td class="govuk-table__cell govuk-!-width-one-third govuk-!-text-align-right">
@@ -27,9 +27,9 @@
   <caption class="govuk-table__caption govuk-table__caption--m">18 September 2023</caption>
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Event</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Description</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-text-align-right">Action</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third"><span class="govuk-visually-hidden">Event</span></th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Change notes</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-text-align-right"><span class="govuk-visually-hidden">Action</span></th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
@@ -48,9 +48,9 @@
   <caption class="govuk-table__caption govuk-table__caption--m">20 September 2023</caption>
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Event</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Description</th>
-      <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-text-align-right">Action</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third"><span class="govuk-visually-hidden">Event</span></th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Change notes</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-third govuk-!-text-align-right"><span class="govuk-visually-hidden">Action</span></th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
