--- a/application/templates/view_record.html
+++ b/application/templates/view_record.html
@@ -19,6 +19,30 @@
           <p class="govuk-body">Field value</p>
         </dd>
       </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key app-summary-list__key">
+          Field name
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">Field value</p>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key app-summary-list__key">
+          Field name
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">Field value</p>
+        </dd>
+      </div>
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key app-summary-list__key">
+          Field name
+        </dt>
+        <dd class="govuk-summary-list__value">
+          <p class="govuk-body">Field value</p>
+        </dd>
+      </div>
 
     </dl>
   </div>
@@ -28,7 +52,7 @@
         "classes": "govuk-!-margin-bottom-0",
         "items": [
           {
-            "text": "Edit record",
+            "text": "Edit this record",
             "type": "submit"
           }
         ]
