--- a/application/templates/confirmation.html
+++ b/application/templates/confirmation.html
@@ -3,11 +3,14 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h1 class="govuk-heading-l">End record</h1>
+    <h1 class="govuk-heading-l">Archive record</h1>
   </div>
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters">
-    <h2 class="govuk-heading-m">Are you sure you want to end this record?</h2>
+    {{ govukWarningText({
+      "text": "Archiving this record will remove it from the dataset",
+      "iconFallbackText": "Warning"
+    }) }}
   </div>
 {% endblock content %}
